Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-1131

"Total" time counter does not capture all the network transmit time

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • Impala 1.3
    • Impala 1.4.1
    • None
    • None

    Description

      In PlanFragmentExecutor::OpenInternal(), the time spent in sink_->Close(runtime_state()) was not captured by the total_time_counter().

      Because the Send() is async, by the time we call Close(), the data might not have sent thought yet and we might spent a considerable amount of time on Close().

      This bug makes it quite difficult to diagnose network related query performance.

      Attachments

        Activity

          People

            nong_impala_60e1 Nong Li
            alan@cloudera.com Alan Choi
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: