IMPALA-1131: Measure time in sink::Close() in fragments' total time.

Change-Id: I811c6da0573f0ff58eea67455a78d0aecfd15d04
Reviewed-on: http://gerrit.sjc.cloudera.com:8080/3742
Tested-by: jenkins
Reviewed-by: Nong Li <nong@cloudera.com>